# gattlib

./: CMakeLists.txt
examples/nordic_uart/: CMakeLists.txt  nordic_uart.c
examples/trans_uart/: CMakeLists.txt  trans_uart.c
